--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 pluginManagement {
 	repositories {
-		maven { url 'https://repo.spring.io/snapshot' }
+		maven { url 'https://repo.spring.io/release' }
 		mavenCentral()
 		gradlePluginPortal()
 	}
 }
-rootProject.name = 'Prototype001'
+rootProject.name = 'prototype001'
